# sheetforge

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: fable_validation_run.yml  setup_problem.yml  usability_observation.yml
.github/workflows/: docs-pages.yml  test.yml
benchmarks/fable-calculator/: README.md  checksums.sha256  manifest.json
docs/: conf.py  examples.rst  index.rst
docs/examples/: fable-2020-notebook-interface.rst  synthetic-notebook-interface.rst
docs/guides/: developer-onboarding.rst  fable-pyculator-onboarding.rst  freshforge-provider-integration.rst  generated-model-artifacts.rst  limitations.rst  notebook-interface.rst  private-workbooks.rst  quickstart.rst  release-deployment.rst  validation-evidence.rst  validation.rst  workflow-boundaries.rst
docs/reference/: cli.rst
examples/: README.md
examples/fable_2020/: scenario_output_manifest.example.json
examples/freshforge/: generated_model_workflow.yaml
examples/notebooks/: README.md  fable-2020-notebook-interface.ipynb  synthetic-notebook-interface.ipynb
planning/: README.md  api-cli-boundary-decision.md  api-stability-review.md  ci-docs-verification-decision.md  cli-json-workflows.md  conversion-plan-contract.md  fixture-regression-test-strategy.md  fresh-cli-docs-reference-audit.md  hardening-tooling-decision.md  implementation-bootstrap-plan.md  ir-prototype-findings.md  literate-notebook-examples-gallery.md  long-term-roadmap.md  mismatch-diagnostics-tolerance-rules.md  model-wrapper-template-facades.md  package-dependency-test-stack-decision.md  phase-10-closeout-phase-11-inputs.md  phase-11-closeout-phase-12-inputs.md  phase-12-closeout-phase-13-inputs.md  phase-16-cli-docs-acceptance-criteria.md  phase-16-closeout-phase-17-inputs.md  phase-17-closeout-phase-18-inputs.md  phase-17-pass1-convergence.md  phase-17-pass5-convergence.md  phase-17-pass6-convergence.md  phase-17-semantics-prioritization.md  phase-18-closeout-phase-19-inputs.md  phase-19-residual-blocker-resolution-plan.md  phase-2-closeout-phase-3-inputs.md  phase-20-validation-evaluation-plan.md  phase-21-full-benchmark-model-validation-plan.md  phase-22-alpha-release-policy.md  phase-22-release-readiness-closeout.md  phase-24-testpypi-rehearsal.md  phase-27-performance-memory-hardening.md  phase-32-fable-pyculator-onboarding-validation-pilot.md  phase-33-freshforge-provider-pilot.md  phase-35-36-downstream-automation-chain.md  phase-4-closeout-phase-5-inputs.md  phase-7-closeout-phase-8-inputs.md  (+11 more)
scripts/: bootstrap_dev_env.sh  check_release_artifacts.sh  materialize_fable_benchmarks.py
src/modelwright/: __init__.py  cli.py  evidence.py  freshforge.py  generation.py  wrappers.py
src/sheetforge/: __init__.py  (+13 more)
tests/: README.md  test_cli.py  test_conversion_plan.py  test_dependency_graph.py  test_evaluation_orchestration.py  test_evidence.py  test_examples.py  test_extraction_records.py  test_fable_wrapper_benchmark.py  test_formula_translation.py  test_formulas_oracle.py  test_freshforge_integration.py  test_generated_execution.py  test_generation_contract.py  test_import.py  test_materialize_fable_benchmarks.py  test_openpyxl_extraction.py  test_oracle_backed_validation.py  test_oracle_interface.py  test_public_api.py  test_python_generation.py  test_references.py  test_scalar_comparison.py  test_supported_semantics_fixture.py  test_synthetic_fixture.py  test_validation.py  test_validation_regression.py  test_validation_report_builder.py  test_wrappers.py
(+9 files in other folders)
