[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sheetforge"
version = "0.0.0"
description = "Tools for converting spreadsheet workbooks into transparent Python models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [
  { name = "UBC FRESH" }
]
dependencies = [
  "openpyxl>=3.1"
]

[project.scripts]
sheetforge = "sheetforge.cli:main"

[project.optional-dependencies]
oracle = [
  "formulas"
]
quality = [
  "ruff>=0.8"
]
test = [
  "formulas",
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["tmp"]
